--- a/templates/arm/stm32_modbus/mods.config
+++ b/templates/arm/stm32_modbus/mods.config
@@ -12,7 +12,7 @@ configuration conf {
 	include embox.fs.dvfs.core(inode_pool_size=24,file_pool_size=20,dentry_pool_size=24)
 
 	include embox.fs.driver.dfs(block_size=0x4000,pages_max=0x10000)
-	include embox.fs.driver.initfs_dvfs(dir_quantity=8)
+	include embox.fs.driver.initfs_dvfs
 	include embox.fs.rootfs_dvfs(fstype="initfs")
 	include embox.compat.posix.fs.all_dvfs
 
